Cleaned up .gitignore, added a few files

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,26 @@
-*
-!*.yaml
-!.gitignore
-!zwcfg_0xe6891f3a.xml
-!.HA_VERSION
-!/appdaemon
-!/appdaemon/appdaemon.yaml
-!/appdaemon/apps
-!/appdaemon/apps/apps.yaml
-!/appdaemon/apps/tstatmagic.py
-ip_bans.yaml
+*~
+/.cloud
+/.deps
+*.log
+getsnaps.sh
+html5_push_registrations.conf
 secrets.yaml
+plex.conf
+pyozw.sqlite
+ip_bans.yaml
 known_devices.yaml
-
+options.xml
+OZW_Log.txt
+/.storage
+/tts
+.uuid
+zigbee.db
+/appdaemon/secrets.yaml
+/appdaemon/*~
+/appdaemon/logs/*
+/appdaemon/apps/*~
+/appdaemon/apps/__pycache__
+/.git
+/www/snapshots
+/www/*png
+/www/sounds/*
