--- a/sensors.yaml
+++ b/sensors.yaml
@@ -1,3 +1,64 @@
+- platform: snmp
+  name: 'Printer Status Message'
+  host: !secret xerox_printer_ip
+  baseoid: 1.3.6.1.2.1.43.16.5.1.2.1.1
+  accept_errors: true
+
+- platform: snmp
+  name: 'Page Count'
+  host: !secret xerox_printer_ip
+  baseoid: 1.3.6.1.4.1.253.8.53.13.2.1.6.1.20.1
+  accept_errors: true
+  unit_of_measurement: 'pages'
+
+- platform: snmp
+  name: 'prncyanlvl'
+  host: !secret xerox_printer_ip
+  baseoid: 1.3.6.1.2.1.43.11.1.1.9.1.1
+  accept_errors: true
+
+- platform: snmp
+  name: 'prncyancap'
+  host: !secret xerox_printer_ip
+  baseoid: 1.3.6.1.2.1.43.11.1.1.8.1.1
+  accept_errors: true
+
+- platform: snmp
+  name: 'prnmagentalvl'
+  host: !secret xerox_printer_ip
+  baseoid: 1.3.6.1.2.1.43.11.1.1.9.1.2
+  accept_errors: true
+
+- platform: snmp
+  name: 'prnmagentacap'
+  host: !secret xerox_printer_ip
+  baseoid: 1.3.6.1.2.1.43.11.1.1.8.1.2
+  accept_errors: true
+
+- platform: snmp
+  name: 'prnyellowlvl'
+  host: !secret xerox_printer_ip
+  baseoid: 1.3.6.1.2.1.43.11.1.1.9.1.3
+  accept_errors: true
+
+- platform: snmp
+  name: 'prnyellowcap'
+  host: !secret xerox_printer_ip
+  baseoid: 1.3.6.1.2.1.43.11.1.1.8.1.3
+  accept_errors: true
+
+- platform: snmp
+  name: 'prnblacklvl'
+  host: !secret xerox_printer_ip
+  baseoid: 1.3.6.1.2.1.43.11.1.1.9.1.4
+  accept_errors: true
+
+- platform: snmp
+  name: 'prnblackcap'
+  host: !secret xerox_printer_ip
+  baseoid: 1.3.6.1.2.1.43.11.1.1.8.1.4
+  accept_errors: true
+
 - platform: noaa_tides
   station_id: 8729210
 
@@ -160,6 +221,22 @@
   
 - platform: template
   sensors:
+    cyan_toner_level:
+      friendly_name: 'Cyan Toner Level'
+      unit_of_measurement: '%'
+      value_template: '{{ ((states.sensor.prncyanlvl.state | float) / (states.sensor.prncyancap.state | float)) * 100 | round(1) }}'
+    magenta_toner_level:
+      friendly_name: 'Magenta Toner Level'
+      unit_of_measurement: '%'
+      value_template: '{{ ((states.sensor.prnmagentalvl.state | float) / (states.sensor.prnmagentacap.state | float)) * 100 | round(1) }}'
+    yellow_toner_level:
+      friendly_name: 'Yellow Toner Level'
+      unit_of_measurement: '%'
+      value_template: '{{ ((states.sensor.prnyellowlvl.state | float) / (states.sensor.prnyellowcap.state | float)) * 100 | round(1) }}'
+    black_toner_level:
+      friendly_name: 'Black Toner Level'
+      unit_of_measurement: '%'
+      value_template: '{{ ((states.sensor.prnblacklvl.state | float) / (states.sensor.prnblackcap.state | float)) * 100 | round(1) }}'
     gunsafebattery:
       value_template: '{{ states.zwave.hank_hkzwdws01_doorwindow_sensor.attributes.battery_level }}'
       unit_of_measurement: '%'
