--- a/configuration.yaml
+++ b/configuration.yaml
@@ -11,47 +11,52 @@ homeassistant:
     - type: homeassistant
     - type: legacy_api_password  
   customize:  
-   climate.2gig_technologies_ct101_thermostat_iris_cooling_1:
-    friendly_name: Thermostat Cooling
-   climate.2gig_technologies_ct101_thermostat_iris_heating_1:     
-    friendly_name: Thermostat Heating
-   sensor.2gig_technologies_ct101_thermostat_iris_temperature:
-    friendly_name: Thermostat Temperature
-   switch.ge_45609_onoff_relay_switch_switch:
-    friendly_name: North Security Lights
-   switch.ge_45609_onoff_relay_switch_switch_2:
-    friendly_name: Front Porch Light
-   sensor.vision_zp3111_multisensor_4in1_relative_humidity:
-    device_class: humidity
-   binary_sensor.centralite_3326l_106cf116_1_1280:
-    friendly_name: Bonus Room Motion
-    device_class: motion
-   binary_sensor.centralite_3320l_1099e14b_1_1280:
-    friendly_name: Master Bedroom Door
-    device_class: door
-   sensor.centralite_3326l_106cf116_1_1026:
-    friendly_name: Bonus Room Temperature
-   sensor.centralite_3320l_1099e14b_1_1026:
-    friendly_name: Master Bedroom Door Temperature
-   sensor.server_average_fanspeed:
-    icon: mdi:fan
-   switch.ge_45609_onoff_relay_switch_switch_3:
-    icon: mdi:fan
-    friendly_name: Bathroom Fan
-   sensor.2gig_technologies_ct101_thermostat_iris_relative_humidity:
-    device_class: humidity
-    friendly_name: Thermostat Humidity
-   sensor.page_count:
-    icon: mdi:image-filter-none
-   sensor.cyan_toner_level:
-    icon: mdi:water
-   sensor.yellow_toner_level:
-    icon: mdi:water
-   sensor.magenta_toner_level:
-    icon: mdi:water
-   sensor.black_toner_level:
-    icon: mdi:water
-    
+    climate.2gig_technologies_ct101_thermostat_iris_cooling_1:
+      friendly_name: Thermostat Cooling
+    climate.2gig_technologies_ct101_thermostat_iris_heating_1:     
+      friendly_name: Thermostat Heating
+    sensor.2gig_technologies_ct101_thermostat_iris_temperature:
+      friendly_name: Thermostat Temperature
+    switch.ge_45609_onoff_relay_switch_switch:
+      friendly_name: North Security Lights
+    switch.ge_45609_onoff_relay_switch_switch_2:
+      friendly_name: Front Porch Light
+    sensor.vision_zp3111_multisensor_4in1_relative_humidity:
+      device_class: humidity
+    binary_sensor.centralite_3326l_106cf116_1_1280:
+      friendly_name: Bonus Room Motion
+      device_class: motion
+    binary_sensor.centralite_3320l_1099e14b_1_1280:
+      friendly_name: Master Bedroom Door
+      device_class: door
+    sensor.centralite_3326l_106cf116_1_1026:
+      friendly_name: Bonus Room Temperature
+    sensor.centralite_3320l_1099e14b_1_1026:
+      friendly_name: Master Bedroom Door Temperature
+    sensor.server_average_fanspeed:
+      icon: mdi:fan
+    switch.ge_45609_onoff_relay_switch_switch_3:
+      icon: mdi:fan
+      friendly_name: Bathroom Fan
+    sensor.2gig_technologies_ct101_thermostat_iris_relative_humidity:
+      device_class: humidity
+      friendly_name: Thermostat Humidity
+    sensor.page_count:
+      icon: mdi:image-filter-none
+    sensor.cyan_toner_level:
+      icon: mdi:water
+    sensor.yellow_toner_level:
+      icon: mdi:water
+    sensor.magenta_toner_level:
+      icon: mdi:water
+    sensor.black_toner_level:
+      icon: mdi:water
+    sensor.printer_status_message:
+      friendly_name: Status
+      icon: mdi:printer-alert
+    sensor.tray1_status:
+      icon: mdi:image-filter-none
+
 map:
 
 logbook:
