--- a/groups.yaml
+++ b/groups.yaml
@@ -59,6 +59,7 @@
     name: Printer Status
     entities:
       - sensor.printer_status_message
+      - sensor.tray1_status
       - sensor.page_count
       - sensor.cyan_toner_level
       - sensor.yellow_toner_level
