--- a/sensors.yaml
+++ b/sensors.yaml
@@ -1,9 +1,15 @@
 - platform: snmp
-  name: 'Printer Status Message'
+  name: 'printer_status_message'
   host: !secret xerox_printer_ip
-  baseoid: 1.3.6.1.2.1.43.16.5.1.2.1.1
+  baseoid: 1.3.6.1.2.1.43.18.1.1.8.1.1
   accept_errors: true
 
+- platform: snmp
+  name: 'prntray1sheetsremaining'
+  host: !secret xerox_printer_ip
+  baseoid: 1.3.6.1.2.1.43.8.2.1.10.1.1
+  accept_errors: true
+  
 - platform: snmp
   name: 'Page Count'
   host: !secret xerox_printer_ip
@@ -196,6 +202,7 @@
     - sensor.hp_ilo_fan3speed
     - sensor.hp_ilo_fan4speed
     - sensor.hp_ilo_fan5speed
+    - sensor.hp_ilo_fan6speed
   type: mean
   name: Server Average Fanspeed
   round_digits: 1
@@ -203,7 +210,6 @@
 - platform: min_max
   entity_ids:
     - sensor.vision_zp3111_multisensor_4in1_temperature
-    - sensor.hp_ilo_ambient_temp
     - sensor.centralite_3326l_106cf116_1_1026
     - sensor.centralite_3320l_1099e14b_1_1026
     - sensor.2gig_technologies_ct101_thermostat_iris_temperature
@@ -221,6 +227,9 @@
   
 - platform: template
   sensors:
+    tray1_status:
+      friendly_name: 'Paper Tray 1 status'
+      value_template: '{% if is_state("sensor.prntray1sheetsremaining", "0") %}Out of paper{% else %}OK{% endif %}'
     cyan_toner_level:
       friendly_name: 'Cyan Toner Level'
       unit_of_measurement: '%'
