--- a/sensors.yaml
+++ b/sensors.yaml
@@ -1,3 +1,4 @@
+# Xerox printer status
 - platform: snmp
   name: 'printer_status_message'
   host: !secret xerox_printer_ip
@@ -65,6 +66,17 @@
   baseoid: 1.3.6.1.2.1.43.11.1.1.8.1.4
   accept_errors: true
 
+# UniFi router throughput monitoring
+- platform: snmp
+  name: router_wan_in
+  host: 192.168.1.1
+  baseoid: 1.3.6.1.2.1.2.2.1.10.4
+
+- platform: snmp
+  name: router_wan_out
+  host: 192.168.1.1
+  baseoid: 1.3.6.1.2.1.2.2.1.16.4
+  
 - platform: noaa_tides
   station_id: 8729210
 
@@ -82,6 +94,8 @@
   resources:
     - type: disk_use_percent
       arg: /
+    - type: disk_use_percent
+      arg: /mnt/backups
     - type: memory_use_percent
     - type: processor_use
           
@@ -132,6 +146,7 @@
       value_template: '{{ ilo_data.temperature["Temp 3"].currentreading[0] }}'
 
 - platform: speedtest
+  server_id: 16618
   minute:
     - 7
     - 27
@@ -281,4 +296,11 @@
       friendly_name: 'Hall Smoke Detector Battery'
       unit_of_measurement: '%'
       device_class: battery
-      
+    internet_speed_in:
+      friendly_name: 'Internet Throughput (down)'
+      value_template: '{{ ((states.input_number.internet_traffic_delta_in.state | float ) / 1000000 ) | round(2) }}'
+      unit_of_measurement: 'Mbps'
+    internet_speed_out:
+      friendly_name: 'Internet Throughput (up)'
+      value_template: '{{ ((states.input_number.internet_traffic_delta_out.state | float ) / 1000000 ) | round(2) }}'
+      unit_of_measurement: 'Mbps'
